[fix] fix unused CheckOS

--- a/playbooks/apply_realm.yml
+++ b/playbooks/apply_realm.yml
@@ -3,8 +3,8 @@
   become: true
   hosts: realm
 
-  pre_tasks:
-    - include: tasks/check_OS.yml
+  # pre_tasks:
+  #   - include: tasks/check_OS.yml
 
   roles:
     - realm
